# umbc-husky

./: CMakeLists.txt  package.xml
launch/: description.launch  spawn_husky.launch
meshes/: UMBC_structure.STL
urdf/: custom_description.gazebo.xacro  custom_description.urdf.xacro  description.xacro  husky.urdf.xacro
